--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
@@ -96,8 +96,9 @@ TypeScript
 <SectionContent slot="content" id="operation-agents_api_v1_agents_list+code-samples+typescript">
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.list({});\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -3916,8 +3917,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.create({\n    model: \"LeBaron\",\n    name: \"<value>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -10759,8 +10761,9 @@ TypeScript
 <SectionContent slot="content" id="operation-agents_api_v1_agents_get+code-samples+typescript">
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.get({\n    agentId: \"<id>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -14456,8 +14459,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.update({\n    agentId: \"<id>\",\n    agentUpdateRequest: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -21361,8 +21365,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.agents.updateVersion({\n    agentId: \"<id>\",\n    version: 157995,\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
