--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries/accesses.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries/accesses.mdx
@@ -94,8 +94,9 @@ TypeScript
 <SectionContent slot="content" id="operation-libraries_share_list_v1+code-samples+typescript">
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.list({\n    libraryId: \"d2169833-d8e2-416e-a372-76518d3d99c2\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -879,8 +880,9 @@ TypeScript
 <SectionContent slot="content" id="operation-libraries_share_create_v1+code-samples+typescript">
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.updateOrCreate({\n    libraryId: \"36de3a24-5b1c-4c8f-9d84-d5642205a976\",\n    sharingIn: {\n      orgId: \"aadd9ae1-f285-4437-884a-091c77efa6fd\",\n      level: \"Viewer\",\n      shareWithUuid: \"0ae92ecb-21ed-47c5-9f7e-0b2cbe325a20\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -1837,8 +1839,9 @@ TypeScript
 <SectionContent slot="content" id="operation-libraries_share_delete_v1+code-samples+typescript">
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.delete({\n    libraryId: \"709e3cad-9fb2-4f4e-bf88-143cf1808107\",\n    sharingDelete: {\n      orgId: \"0814a235-c2d0-4814-875a-4b85f93d3dc7\",\n      shareWithUuid: \"b843cc47-ce8f-4354-8cfc-5fcd7fb2865b\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
