--- a/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/embeddings/page.mdx
@@ -88,8 +88,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.embeddings.create({\n    model: \"mistral-embed\",\n    inputs: [\n      \"Embed this sentence.\",\n      \"As well as this one.\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
