--- a/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
@@ -111,8 +111,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.chat.complete({\n    model: \"mistral-small-latest\",\n    messages: [\n      {\n        content: \"Who is the best French painter? Answer in one short sentence.\",\n        role: \"user\",\n      },\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
