--- a/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning.mdx
@@ -102,8 +102,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fineTuning.jobs.list({});\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -5915,8 +5916,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fineTuning.jobs.create({\n    model: \"Camaro\",\n    hyperparameters: {\n      learningRate: 0.0001,\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -15349,8 +15351,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fineTuning.jobs.get({\n    jobId: \"c167a961-ffca-4bcf-93ac-6169468dd389\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -23459,8 +23462,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fineTuning.jobs.cancel({\n    jobId: \"6188a2f6-7513-4e0f-89cc-3f8088523a49\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -31569,8 +31573,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fineTuning.jobs.start({\n    jobId: \"56553e4d-0679-471e-b9ac-59a77d671103\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
