--- a/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/models/page.mdx
@@ -89,8 +89,9 @@ TypeScript
 <SectionContent slot="content" id="operation-list_models_v1_models_get_code-samples_typescript">
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.list();\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -1260,8 +1261,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.retrieve({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -2469,8 +2471,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.delete({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -2747,8 +2750,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.update({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n    updateFTModelIn: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -4053,8 +4057,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.archive({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
@@ -4293,8 +4298,9 @@ TypeScript
 >
 
 <TryItNow
-  dependencyBundleUrl="/try-it-now/deps.js"
+  dependencyUrlPrefix="/try-it-now"
   defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.models.unarchive({\n    modelId: \"ft:open-mistral-7b:587a6b29:20240514:7e773925\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+  packageName="@mistralai/mistralai"
 />
 
 </SectionContent>
